dark mode mobile fix

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -5,23 +5,19 @@
   }
   
 @media (max-width: 650px) {
-body {
-    background-color: #ffffff;
-}
+	.instagram-wrapper {
+		width: 90%;
+	}
 
-.instagram-wrapper {
-    width: 90%;
-}
+	.instagram-phone {
+		display: none;
+	}
 
-.instagram-phone {
-    display: none;
-}
+	.instagram-continue {
+		width: 100%;
+	}
 
-.instagram-continue {
-    width: 100%;
-}
-
-.group {
-    border: 1px solid transparent;
-}
+	.group {
+		border: 1px solid transparent;
+	}
 }
